fixed bug scrollbar

--- a/style.css
+++ b/style.css
@@ -620,7 +620,7 @@ h5 {
 .background__arrow__top {
   position: fixed;
   top: 10%;
-  right: 5%;
+  right: 3%;
   width: 50px;
   height: 55px;
   background-color: rgba(222, 86, 86, 0);
@@ -646,7 +646,7 @@ h5 {
 .background__arrow__bottom {
   position: fixed;
   bottom: 10%;
-  right: 5%;
+  right: 3%;
   width: 50px;
   height: 55px;
   background-color: rgba(222, 86, 86, 0);
@@ -734,17 +734,24 @@ h5 {
 
 ::-webkit-scrollbar {
   width: 0;
+} 
+
+body {
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+body::-webkit-scrollbar {
+  width: 5px;
+  background-color: rgb(249, 240, 240);
+}
+body::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background-color: rgb(249, 240, 240);
+}
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(222, 86, 86);
+  border-radius: 5px;
 }
 
-#scroll {
-  overflow-y: scroll;
-}
-#scroll::-webkit-scrollbar {
-  width: 7px;
-  background-color: rgba(222, 86, 86, 0.689);
-}
-#scroll::-webkit-scrollbar-thumb {
-  background-color: rgb(255, 0, 0);
-}
 
 
